src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__neg_float64.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(\n    sqlname = \"-\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(NegFloat64),\n    is_monotone = true\n)]\nfn neg_float64(a: f64) -> f64 {\n    -a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct NegFloat64;
impl crate::func::EagerUnaryFunc for NegFloat64 {
    type Input<'a> = f64;
    type Output<'a> = f64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        neg_float64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(NegFloat64)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for NegFloat64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
fn neg_float64(a: f64) -> f64 {
    -a
}
