src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__sqrt_float64.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"sqrtf64\")]\nfn sqrt_float64(a: f64) -> Result<f64, EvalError> {\n    if a < 0.0 {\n        return Err(EvalError::NegSqrt);\n    }\n    Ok(a.sqrt())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct SqrtFloat64;
impl crate::func::EagerUnaryFunc for SqrtFloat64 {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        sqrt_float64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for SqrtFloat64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("sqrtf64")
    }
}
fn sqrt_float64(a: f64) -> Result<f64, EvalError> {
    if a < 0.0 {
        return Err(EvalError::NegSqrt);
    }
    Ok(a.sqrt())
}
