src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__to_timestamp.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"tots\")]\nfn to_timestamp(f: f64) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    const NANO_SECONDS_PER_SECOND: i64 = 1_000_000_000;\n    if f.is_nan() {\n        Err(EvalError::TimestampCannotBeNan)\n    } else if f.is_infinite() {\n        Err(EvalError::TimestampOutOfRange)\n    } else {\n        let mut secs = i64::try_cast_from(f.trunc())\n            .ok_or(EvalError::TimestampOutOfRange)?;\n        let microsecs = (f.fract() * 1_000_000.0).round();\n        let mut nanosecs = i64::try_cast_from(microsecs * 1_000.0)\n            .ok_or(EvalError::TimestampOutOfRange)?;\n        if nanosecs < 0 {\n            secs = secs.checked_sub(1).ok_or(EvalError::TimestampOutOfRange)?;\n            nanosecs = NANO_SECONDS_PER_SECOND\n                .checked_add(nanosecs)\n                .ok_or(EvalError::TimestampOutOfRange)?;\n        }\n        secs = secs\n            .checked_add(nanosecs / NANO_SECONDS_PER_SECOND)\n            .ok_or(EvalError::TimestampOutOfRange)?;\n        nanosecs %= NANO_SECONDS_PER_SECOND;\n        let nanosecs = u32::try_from(nanosecs)\n            .map_err(|_| EvalError::TimestampOutOfRange)?;\n        match DateTime::from_timestamp(secs, nanosecs) {\n            Some(dt) => {\n                CheckedTimestamp::from_timestamplike(dt)\n                    .map_err(|_| EvalError::TimestampOutOfRange)\n            }\n            None => Err(EvalError::TimestampOutOfRange),\n        }\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ToTimestamp;
impl crate::func::EagerUnaryFunc for ToTimestamp {
    type Input<'a> = f64;
    type Output<'a> = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        to_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for ToTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("tots")
    }
}
fn to_timestamp(f: f64) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    const NANO_SECONDS_PER_SECOND: i64 = 1_000_000_000;
    if f.is_nan() {
        Err(EvalError::TimestampCannotBeNan)
    } else if f.is_infinite() {
        Err(EvalError::TimestampOutOfRange)
    } else {
        let mut secs = i64::try_cast_from(f.trunc())
            .ok_or(EvalError::TimestampOutOfRange)?;
        let microsecs = (f.fract() * 1_000_000.0).round();
        let mut nanosecs = i64::try_cast_from(microsecs * 1_000.0)
            .ok_or(EvalError::TimestampOutOfRange)?;
        if nanosecs < 0 {
            secs = secs.checked_sub(1).ok_or(EvalError::TimestampOutOfRange)?;
            nanosecs = NANO_SECONDS_PER_SECOND
                .checked_add(nanosecs)
                .ok_or(EvalError::TimestampOutOfRange)?;
        }
        secs = secs
            .checked_add(nanosecs / NANO_SECONDS_PER_SECOND)
            .ok_or(EvalError::TimestampOutOfRange)?;
        nanosecs %= NANO_SECONDS_PER_SECOND;
        let nanosecs = u32::try_from(nanosecs)
            .map_err(|_| EvalError::TimestampOutOfRange)?;
        match DateTime::from_timestamp(secs, nanosecs) {
            Some(dt) => {
                CheckedTimestamp::from_timestamplike(dt)
                    .map_err(|_| EvalError::TimestampOutOfRange)
            }
            None => Err(EvalError::TimestampOutOfRange),
        }
    }
}
